--- a/server/reporter/server.config
+++ b/server/reporter/server.config
@@ -1,7 +1,8 @@
 #Configuration for MongoDB ReplicaSet
 #ReplicaSetServer=192.168.5.60:27017,192.168.7.52:27017,192.168.5.156:27017
-ReplicaSetServer=dbserver-1:27017,dbserver-2:27017,dbserver-3:27017
-ReplicaSetName=ats_rs
+#ReplicaSetServer=dbserver-1:27017,dbserver-2:27017,dbserver-3:27017
+#ReplicaSetName=ats_rs
+MongoServer=192.168.5.60:27017
 
 #Configuration for Redis
 RedisServer=192.168.7.218
